--- a/.github/workflows/configure.yml
+++ b/.github/workflows/configure.yml
@@ -14,22 +14,22 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        runs-on: [ubuntu-latest, macos-latest, windows-latest]
+        runs-on: [ubuntu-latest, macos-latest] #, windows-latest]
         arch: [x64]
         cmake: ["3.23"]
 
         include:
-        - runs-on: ubuntu-latest
-          arch: x64
-          cmake: 3.4
+        # - runs-on: ubuntu-latest
+        #   arch: x64
+        #   cmake: 3.4
 
         - runs-on: macos-latest
           arch: x64
           cmake: 3.7
 
-        - runs-on: windows-2019
-          arch: x64 # x86 compilers seem to be missing on 2019 image
-          cmake: 3.18
+        # - runs-on: windows-2019
+        #   arch: x64 # x86 compilers seem to be missing on 2019 image
+        #   cmake: 3.18
 
     name: 🐍 3.7 • CMake ${{ matrix.cmake }} • ${{ matrix.runs-on }}
     runs-on: ${{ matrix.runs-on }}
