--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -593,7 +593,7 @@ jobs:
   #       container:
   #         - "centos:7"  # GCC 4.8
   #         - "almalinux:8"
-          - "almalinux:9"
+  #         - "almalinux:9"
 
   #   name: "🐍 3 • ${{ matrix.container }} • x64"
   #   container: "${{ matrix.container }}"
@@ -800,7 +800,7 @@ jobs:
   #     uses: actions/setup-python@v4
   #     with:
   #       python-version: ${{ matrix.python }}
-        architecture: x86
+  #       architecture: x86
 
   #   - name: Update CMake
   #     uses: jwlawson/actions-setup-cmake@v1.12
