--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -406,7 +406,7 @@ jobs:
 
   # # Testing on CentOS 7 + PGI compilers, which seems to require more workarounds
   # centos-nvhpc7:
-    if: ${{ false }}  # JOB DISABLED (NEEDS WORK): https://github.com/pybind/pybind11/issues/4690
+  #   if: ${{ false }}  # JOB DISABLED (NEEDS WORK): https://github.com/pybind/pybind11/issues/4690
   #   runs-on: ubuntu-latest
   #   name: "🐍 3 • CentOS7 / PGI 22.9 • x64"
   #   container: centos:7
@@ -778,8 +778,8 @@ jobs:
   #           args: -DCMAKE_CXX_STANDARD=20
   #         - python: 3.8
   #           args: -DCMAKE_CXX_STANDARD=17
-          - python: 3.7
-            args: -DCMAKE_CXX_STANDARD=14
+  #         - python: 3.7
+  #           args: -DCMAKE_CXX_STANDARD=14
 
 
   #   name: "🐍 ${{ matrix.python }} • MSVC 2019 • x86 ${{ matrix.args }}"
