--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,7 +1,13 @@
 --only-binary=:all:
 build~=1.0
-oldest-suppored-numpy
-pytest~=7.0.0
+numpy~=1.20.0; python_version=="3.7" and platform_python_implementation=="PyPy"
+numpy~=1.22.2; python_version=="3.8" and platform_python_implementation=="PyPy"
+numpy~=1.25.0; python_version=="3.9" and platform_python_implementation=='PyPy'
+numpy~=1.19.3; platform_python_implementation!="PyPy" and python_version=="3.6"
+numpy~=1.21.5; platform_python_implementation!="PyPy" and python_version>="3.7" and python_version<"3.10"
+numpy~=1.22.2; platform_python_implementation!="PyPy" and python_version=="3.10"
+numpy~=1.26.0; platform_python_implementation!="PyPy" and python_version>="3.11"
+pytest~=7.0
 pytest-timeout
 scipy~=1.5.4; platform_python_implementation!="PyPy" and python_version<"3.10"
 scipy~=1.8.0; platform_python_implementation!="PyPy" and python_version=="3.10"
