--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -643,8 +643,7 @@ jobs:
       uses: actions/checkout@v4
       if: matrix.container != 'centos:7'
 
-    - name: Pin actions/checkout as required for centos:7
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v3  # v3 PINNED AS REQUIRED
       if: matrix.container == 'centos:7'
 
     - name: Add Python 3 (RHEL 7)
@@ -693,7 +692,7 @@ jobs:
     container: i386/debian:buster
 
     steps:
-    - uses: actions/checkout@v4  # v1 is required to run inside docker
+    - uses: actions/checkout@v1  # v1 PINNED AS REQUIRED
 
     - name: Install requirements
       run: |
